Web: multi-gain exports + better UX; CLI: multi-gain/multi-input
- CLI: support multiple gains per run via repeated flags or comma-separated lists
	(e.g. --gain-db 3,6,7.5,9) and multiple --input values; add --output-dir for
	multi-output workflows; keep --output restricted to single-output runs.
- CLI: improve argument validation + exit codes; print a short "Wrote ..." summary.

- Web: allow multiple gain levels via comma-separated input; export one .nam per
	gain level per input file and auto-zip when multiple outputs exist.
- Web: add a "Choose .nam files" button inside the drop area for environments
	without drag-and-drop; keep "Drop .nam files here" visible.
- Web: UI tweaks (Download button label/rounded style, footer "learn more" link,
	updated tip text, tightened header spacing).

- Web robustness: avoid WASM aborts from C++ exceptions by making processNam
	no-throw (non-throwing JSON parse + explicit type checks) and enabling
	exception catching in the Emscripten build; rebuild and update web artifacts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ if(EMSCRIPTEN)
     add_executable(nam-volume-knob-web src/main.cpp ${SOURCES} src/web_bindings.cpp)
     set_target_properties(nam-volume-knob-web PROPERTIES SUFFIX ".js")
     target_link_libraries(nam-volume-knob-web --bind)
+    # Keep web UX friendly: prevent hard aborts on thrown exceptions.
+    target_link_options(nam-volume-knob-web PRIVATE "-sDISABLE_EXCEPTION_CATCHING=0")
 endif()
 
 # Tests
